# arxiv-classifier

./: .gitignore  CHANGELOG.md  LICENSE.txt  README.md  pyproject.toml
data/: taxonomy.json
misc/: nn_theory_for_readme_draft.md
reports/: summary.txt
reports/metrics/: ngram_classification_report.csv  tfidf_classification_report.csv  tfidf_classification_report.txt
src/arxiv_classifier/: __init__.py  cli.py  paths.py
src/arxiv_classifier/config/: __init__.py  models_config.py  preprocessing_config.py  vectorization_config.py
src/arxiv_classifier/models/: fmlp.py
src/arxiv_classifier/preprocessing/: dataset_to_clean_dataset.py  get_dataset.py  get_raw.py  grab_labels.py  json_to_parquet.py  raw_parquet_to_dataset.py  split_dataset.py  taxonomy_scraper.py
src/arxiv_classifier/trainings/: train_embeddings.py  train_ngram.py  train_tfidf.py
src/arxiv_classifier/utils/: __init__.py  activation_functions.py  adam_gradient.py  batch_load.py  get_model_config.py  load_training_data.py  log_training_summary.py  restart_file.py  utils.py
src/arxiv_classifier/vectorizations/: embeddings_vectorization.py  ngram_vectorization.py  tfidf_vectorization.py
tests/: conftest.py  test_model_fmlp.py  test_utils_get_model_config.py  test_utils_restart_file.py
