[project]
name = "arxiv_classifier"     
version = "0.1.0"
authors = [{ name = "Adrián Raso González" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
arxiv-classifier = "arxiv_classifier.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

dependencies = [
    # Core data and numerical processing
    "numpy>=1.26.0",
    "pyarrow>=2.2.2",
    "pandas>=17.0.0",
    "polars>=1.12.0",

    # Machine Learning, Evaluation, and Visualization
    "scikit-learn>=1.3.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",

    # Web scraping and HTTP
    "beautifulsoup4>=4.12.3",
    "requests>=2.32.3",

    # CLI and utilities
    "tqdm>=4.66.4",
    "argparse>=1.4.0",
    "pathlib>=1.0.1",
    "setuptools>=68.0.0",
]
